examples/test/testpolicy17017.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17017
  namespace: namespace305
spec:
  podSelector:
    matchLabels:
      key22: value33
      key20: value44
      key34: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value48
          key3: value36
      podSelector:
        matchLabels:
          key48: value18
          key41: value48
